# datafusion-ducklake

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.claude/skills/release/: SKILL.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmark/: Cargo.toml
benchmark/src/: benchmark_parser.rs  datafusion_runner.rs  duckdb_runner.rs  main.rs  metrics.rs  report.rs  runner.rs  tpcds.rs  tpch.rs
examples/: basic_query.rs  postgres_catalog.rs
src/: catalog.rs  column_rename.rs  data_store_provider.rs  delete_filter.rs  encryption.rs  error.rs  information_schema.rs  inlining.rs  insert_exec.rs  lib.rs  metadata_provider.rs  metadata_provider_duckdb.rs  metadata_provider_mysql.rs  metadata_provider_postgres.rs  metadata_provider_sqlite.rs  metadata_writer.rs  metadata_writer_postgres.rs  metadata_writer_sqlite.rs  path_resolver.rs  schema.rs  table.rs  table_changes.rs  table_deletions.rs  table_functions.rs  table_writer.rs  types.rs
src/sql/: metadata_writer_postgres_create_schema.sql
tests/: README.md  concurrent_tests.rs  concurrent_write_tests.rs  delete_filter_tests.rs  encryption_tests.rs  generate_test_data.sh  hybrid_asyncdb.rs  information_schema_test.rs  missing_delete_file_tests.rs  mysql_metadata_provider_test.rs  numeric_metadata_validation_tests.rs  object_store_integration_test.rs  postgres_inline_write_tests.rs  postgres_metadata_provider_test.rs  renamed_columns_tests.rs  setup_test_data_v2.sql  sql_write_tests.rs  sqlite_metadata_provider_test.rs  sqllogictest_runner.rs  table_changes_tests.rs  table_tests.rs  write_tests.rs
tests/common/: mod.rs
tests/sqllogictests/: runner.rs
tests/test_data/: README.md  setup_multiple_deletes_catalog.sql
