[workspace]
members = [".", "benchmark"]

[package]
name = "datafusion-ducklake"
version = "0.0.6"
edition = "2024"
authors = ["zac@hotdata.dev", "shefeek@hotdata.dev", "anoop@hotdata.dev"]
description = "DuckLake query engine for rust, built with datafusion."
license = "Apache-2.0"
repository = "https://github.com/hotdata-dev/datafusion-ducklake"
homepage = "https://github.com/hotdata-dev/datafusion-ducklake"
documentation = "https://docs.rs/datafusion-ducklake"
readme = "README.md"
keywords = ["datafusion", "duckdb", "ducklake", "iceberg", "datalake"]
categories = ["database", "filesystem"]
exclude = ["datafusion-ducklake.iml", "target", "tests/test_data"]

[dependencies]
datafusion = "51.0"
arrow = "57"
parquet = "57"
object_store = { version = "0.12.4", features = ["aws"] }
url = "2.5"
percent-encoding = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
thiserror = "2.0"

# Encryption support (optional)
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }

# Write support (optional)
uuid = { version = "1.0", features = ["v4"], optional = true }

# Metadata providers (optional)
duckdb = { version = "1.4.1", features = ["bundled"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio"], optional = true }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio", "postgres", "mysql"] }
tempfile = "3.14"
anyhow = "1.0"
aws-sdk-s3 = "1.75"
aws-credential-types = "1.2"
sqllogictest = "0.23"

[features]
default = ["metadata-duckdb"]

# Allow skipping tests that use docker (in CI, macos doesn't support docker).
skip-tests-with-docker = []

# Metadata provider backends
metadata-duckdb = ["dep:duckdb"]
metadata-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/chrono"]
metadata-mysql = ["dep:sqlx", "sqlx/mysql", "sqlx/chrono"]
metadata-sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/chrono"]

# Encryption support for Parquet files
encryption = ["parquet/encryption", "datafusion/parquet_encryption", "dep:base64", "dep:hex"]

# Write support
write = ["dep:uuid"]
write-sqlite = ["write", "metadata-sqlite"]