[package]
name = "ducklake-benchmark"
version = "0.1.0"
edition = "2024"
description = "Benchmark comparing DuckDB-DuckLake vs DataFusion-DuckLake performance"
publish = false

[[bin]]
name = "ducklake-benchmark"
path = "src/main.rs"

[[bin]]
name = "generate-tpch"
path = "src/bin/generate_tpch.rs"

[dependencies]
# Use the parent crate
datafusion-ducklake = { path = "..", features = ["metadata-duckdb"] }

# Core dependencies
datafusion = "50.1.0"
duckdb = { version = "1.4.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }

# CLI and reporting
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
chrono = "0.4"

# Utilities
anyhow = "1"
regex = "1"
walkdir = "2"
