[package]
name = "ducklake-benchmark"
version = "0.1.0"
edition = "2024"
description = "Benchmark comparing DuckDB-DuckLake vs DataFusion-DuckLake performance"
publish = false

[[bin]]
name = "ducklake-benchmark"
path = "src/main.rs"

[[bin]]
name = "generate-tpch"
path = "src/bin/generate_tpch.rs"

[[bin]]
name = "generate-tpcds"
path = "src/bin/generate_tpcds.rs"

[dependencies]
# DataFusion-DuckLake: Uncomment ONE of the following options

# Option 1: Local development (default)
datafusion-ducklake = { path = "..", features = ["metadata-duckdb"] }

# Option 2: Specific git commit
# datafusion-ducklake = { git = "https://github.com/hotdata-dev/datafusion-ducklake", rev = "COMMIT_HASH", features = ["metadata-duckdb"] }

# Option 3: Git branch
# datafusion-ducklake = { git = "https://github.com/hotdata-dev/datafusion-ducklake", branch = "main", features = ["metadata-duckdb"] }

# Option 4: Published crates.io version
# datafusion-ducklake = { version = "0.1.0", features = ["metadata-duckdb"] }

# Core dependencies
datafusion = "51.0"
duckdb = { version = "1.4.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI and reporting
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
chrono = "0.4"

# Utilities
anyhow = "1"
regex = "1"
walkdir = "2"
